# jupyter-playground

./: README.md  pyproject.toml  setup.cfg
notebooks/: hf_1_transformer_apps.ipynb  hf_2_datasets.ipynb  hf_3_training_text_classifier.ipynb  hf_4_training_text_classifier_fine_tune.ipynb  hf_6_multilingual_named_entity_recognition.ipynb  hf_8_ch_6_summarization.ipynb  hf_9_ch_7_question_answering.ipynb  ml_translation_transformer.ipynb  plot_decision_tree.ipynb  plot_leaflet_map.ipynb  plot_pyplot.ipynb
notebooks/data/: test_data_addition.ipynb  test_data_manipulation.ipynb
notebooks/gpt/: chat_gpt.ipynb  docs_generator_gpt.ipynb
notebooks/ml/: image_classifier_keras.ipynb  imdb_sentiment_analysis.ipynb  shakespeare_char_rnn_stateless_ts.ipynb
notebooks/plot/: decision_tree.ipynb  leaflet_map.ipynb  pyplot.ipynb
