[metadata]
name = jupyter-playground
version = 1.0.0
author = Tobrun Van Nuland
author_email = tobrun.van.nuland@gmail.com
description = Showcase experiments in data science and visualization
long_description = file: README.md
classifiers =
    Programming Language :: Python

[options]
python_requires = >=3.7
packages = find:

install_requires =
    notebook==6.4.6
    ipython-gpt==0.0.4
    requests==2.28.2
    geopandas==0.12.2
    scikit-learn==1.2.2
    matplotlib==3.7

[options.extras_require]
lint = 
    # black
    black==23.1.0
    typed-ast==1.5.4; python_version<'3.8'
    mypy-extensions==0.4.3
    pathspec==0.11.0
    platformdirs==2.6.2
    # flake8
    flake8==5.0.4
    mccabe==0.7.0
    pycodestyle==2.9.0
    pyflakes==2.5.0
    importlib-metadata==4.2.0
    # isort
    isort==5.11.5
